# image-compressor

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  exif_handler.rs  image_processor.rs  lib.rs  main.rs  models.rs
